# emeraldDB

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.chs.md  README.md
doc/: EmeraldDB_class_uml.chs.md  EmeraldDB_class_uml.md  socket_module.chs.md
doc/imags/: EmeraldDB_client.drawio
include/: ErrorCode.h
opensource/: CMakeLists.txt
opensource/bson/: CMakeLists.txt  FindBson.cmake
opensource/bson/lib/: nonce.cpp
opensource/bson/src/: bson_db.h  bsonmisc.h  bsonobj.cpp  bsonobjbuilder.h
opensource/bson/src/util/: time_support.h
opensource/glog/lib/: libglog.so.0.6.0
opensource/glog/lib/pkgconfig/: libglog.pc
opensource/googletest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Client.cpp  Client.h  ClientMain.cpp  Edb.cpp  Edb.h
src/client/cmd/: CMakeLists.txt  CmdInf.cpp  CmdInf.h  ConnectCmd.cpp  ConnectCmd.h  HelpCmd.cpp  HelpCmd.h  QuitCmd.cpp  QuitCmd.h  TestCmd.cpp  TestCmd.h
src/msg/: Msg.cpp  Msg.h
src/oss/: CMakeLists.txt  FileOperator.cpp  FileOperator.h  Hash.cpp  Hash.h  Mmap.cpp  Mmap.h  Socket.cpp  Socket.h
src/pd/: CMakeLists.txt  Log.cpp  Log.h
src/pmd/: CMakeLists.txt  ServerMain.cpp  TcpListener.cpp  TcpListener.h
src/utils/: CMakeLists.txt  ClassRegister.h  ErrorCode.cpp  Singleton.h  log.h
test/: CMakeLists.txt
test/ut/: CMakeLists.txt  ut_main.cpp
test/ut/client/: CMakeLists.txt  Client_test.cpp  Edb_test.cpp
test/ut/client/cmd/: CMakeLists.txt  CmdInf_test.cpp  ConnectCmd_test.cpp  QuitCmd_test.cpp
test/ut/fake/: Socket_fake.h
test/ut/oss/: CMakeLists.txt  Socket_test.cpp  Socket_test.h
test/ut/pmd/: pmdMain.cpp
