add_compile_options(-Werror)

include_directories(${PROJECT_SOURCE_DIR}/src)
include(${PROJECT_SOURCE_DIR}/opensource/bson/FindBson.cmake)

add_subdirectory(client)
add_subdirectory(dms)
add_subdirectory(ixm)
add_subdirectory(mon)
add_subdirectory(msg)
add_subdirectory(oss)
add_subdirectory(pd)
add_subdirectory(pmd)
add_subdirectory(rtn)
add_subdirectory(utils)